# appservice-delta

./: .gitignore  .gitmodules  Cargo.toml  appservice-registration-delta.sample.yaml  shell.nix
src/: cmdline.rs  compat.rs  delta_events.rs  intent.rs  main.rs  matrix_events.rs  matrix_intents.rs  types.rs  util.rs
