[package]
name = "appservice-delta"
version = "0.0.0"
authors = ["Vincent Breitmoser <look@my.amazin.horse>"]
edition = "2018"
resolver = "2"

[profile.dev]
debug = 0

[profile.release]
lto = true

[dependencies]
deltachat = { path = "./deltachat-core-rust", features = ["repl"] }
matrix-sdk-appservice = { path = "./matrix-rust-sdk/crates/matrix-sdk-appservice" }
matrix-sdk = { version = "0.4", path = "./matrix-rust-sdk/crates/matrix-sdk", default-features = false, features = ["appservice"] }
dashmap = "4"

shell-words = "1"

serde = { version = "1.0.126", features = ["rc"] }
serde_json = "1"
anyhow = "1"
ansi_term = "0.12.0"
async-std = { version = "1", features = ["unstable", "attributes", "tokio1"] }
criterion = "0.3"
futures-lite = "1.12"
log = "0.4"
pretty_assertions = "1.0"
pretty_env_logger = "0.4"
proptest = "1"
tempfile = "3"

[[bin]]
name = "appservice-delta"
path = "src/main.rs"

